Update discussions UI for overflow issues

--- a/css/discussions.scss
+++ b/css/discussions.scss
@@ -36,6 +36,16 @@ body {
   overflow: auto;
 }
 
+.selected-channel {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  background-color: #dbeafe;
+  color: #60a5fa;
+  border-radius: 1rem;
+}
+
 .main {
   flex: 1 1 auto;
   overflow-y: scroll;
@@ -194,6 +204,7 @@ body {
 .course-tree ul,
 .course-tree li {
   position: relative;
+  text-transform: capitalize;
 }
 
 .course-tree ul {
