--- a/css/sidebar.scss
+++ b/css/sidebar.scss
@@ -1,28 +1,29 @@
 .sidebar {
-    flex: 0 0 auto;
-    background: white;
-    padding: 1rem;
-    width: 17rem;
-    margin: 0.5rem;
-    border-radius: 1.5rem;
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-      0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  }
-  
-  .logo-wrapper {
-    padding: 0.75rem;
-    background-color: #ffffff;
-    text-align: center;
-    width: 100%;
-    border-radius: 1.5rem;
-    border-right-width: 2px;
-    border-left-width: 2px;
-    border-color: #bfdbfe;
-  }
-  
-  .logo-text {
-    color: #3b82f6;
-    font-size: 3rem;
-    line-height: 1;
-    font-weight: 700;
-  }
+  flex: 0 0 auto;
+  background: white;
+  padding: 1rem;
+  width: 17rem;
+  margin: 0.5rem;
+  border-radius: 1.5rem;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  overflow-y: scroll;
+}
+
+.logo-wrapper {
+  padding: 0.75rem;
+  background-color: #ffffff;
+  text-align: center;
+  width: 100%;
+  border-radius: 1.5rem;
+  border-right-width: 2px;
+  border-left-width: 2px;
+  border-color: #bfdbfe;
+}
+
+.logo-text {
+  color: #3b82f6;
+  font-size: 3rem;
+  line-height: 1;
+  font-weight: 700;
+}
